Tried fixing layout  issue on mobile screens with heights shorter than 600px

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-
   height: 100vh;
   /* overflow: hidden; */
 }
@@ -45,9 +44,9 @@ body {
   right: 0.5rem;
   border: none;
   background: transparent;
-  padding: 0.5rem 0.8rem;
+  padding: 0.6rem 0.8rem;
   color: #acacac;
-  font-size: 1rem;
+  font-size: 0.75rem;
   cursor: pointer;
 }
 .clear:hover {
@@ -62,7 +61,7 @@ body {
   border-radius: 1000px;
   border: 2px solid rgb(161, 160, 160, 0.5);
   color: var(--primary);
-  padding: 0.6rem 1.5rem;
+  padding: 0.45rem 1.5rem;
   font-family: inherit;
   font-size: 0.9rem;
   font-weight: 500;
@@ -82,7 +81,7 @@ body {
   cursor: pointer;
   background-color: var(--primary);
   color: var(--secondary);
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   border: 0;
   border-radius: 100%;
   padding: 0.2rem 0.3rem;
@@ -289,5 +288,33 @@ body {
   .clock {
     width: 16rem;
     height: 16rem;
+  }
+}
+@media (max-height: 600px) {
+  .search {
+    height: 2rem;
+  }
+  .city {
+    font-size: 1.3rem;
+  }
+  .desc {
+    font-size: 1.1rem;
+  }
+  .wind-parent {
+    font-size: 1rem;
+  }
+  .clock {
+    height: 15rem;
+    width: 15rem;
+  }
+  .time {
+    font-size: 1.6rem;
+  }
+  .date {
+    font-size: 0.7rem;
+    margin-top: 0;
+  }
+  .author {
+    font-size: 0.6rem;
   }
 }
